# inrol_sim_bolting

./: CMakeLists.txt  README.md  package.xml
3rd/libinrol_sim_bolting/: CMakeLists.txt
3rd/libinrol_sim_bolting/include/inrol_sim_bolting/: inrol_sim_bolting.hpp
assets/des/: Rd.txt  Rd_gripper.txt  pd.txt
assets/txt/: CW0.txt  CW1.txt  CW2.txt  CW3.txt  Cb0.txt  Cb1.txt  Cb2.txt  Cb3.txt  Cmai.txt  Cmii.txt  Mi.txt  Mo.txt  W0.txt  W1.txt  W2.txt  W3.txt  Yo.txt  b0.txt  b1.txt  b2.txt  b3.txt  fo.txt  mai.txt  mii.txt  mo.txt  no.txt  om.txt  pa.txt  po.txt
launch/: example.launch
src/: simulation_main.cpp  visualization_main.cpp
